[FIX] fixed records header to stick despite moving scrollbar

--- a/web/css/table-format.css
+++ b/web/css/table-format.css
@@ -47,6 +47,11 @@
     max-width: 84%
 }
 
+.tableContent thead th {
+    position: sticky;
+    top: -1px;
+}
+
 #financesLeft {
     width: 60%;
     height: 100%;
